--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div class="box">
     <h1>Congratulations!</h1>
+    <h2>Welcome Git</h2>
     <p>You successfully cloned a Git repository from the server to your computer&rsquo;s hard drive. Now, let&rsquo;s celebrate for a few seconds by looking at cute animals.</p>
   </div>
 
